syntax = "proto3";

option csharp_namespace = "XKM.Grpc";

package StaffProto;
//import  "Protos/RR.proto";
// 这是一个默认额
service Staff {
  //方法
    rpc SayHello (HelloRequest) returns (HelloReply);//集合
    rpc SayHellos (HelloRequest) returns (HelloReply);//集合
}

// 请求类型
message HelloRequest {
  string name = 1;
}

// 返回类型
message HelloReply {
  string message = 1;
  //repeated RRProto.SearchResponse resultsk = 2;
 
}
